# ccTraining

./: CMakeLists.txt  ccTraining.pro
UIs/: mainwindow.ui
include/: mainwindow.h
src/: mainwindow.cpp
